--- a/VerifyingSignatures.html
+++ b/VerifyingSignatures.html
@@ -10,7 +10,7 @@
 <h2 id="ImportingQubesSigningKeys">Importing Qubes Signing Keys</h2>
 <p>Every file published by the Qubes Project (rpm, tgz, git repositories) is digitally signed by one of the developer or release keys. Each such key is signed by the Qubes Master Signing Key (<code>0x36879494</code>).</p>
 <p>The public portion of the Master Key can be download from a keyserver, e.g.:</p>
-<pre class="wiki"><code>gpg --keyserver pgp.mit.edu --recv 0x36879494</code></pre>
+<pre class="wiki"><code>gpg --recv 0x36879494</code></pre>
 <p>(You can use other key server than <code>pgp.mit.edu</code>, which is just an example)</p>
 <p>For additional security we also publish the The Master Key's fingerprint here in this document:</p>
 <pre class="wiki"><code>pub   4096R/36879494 2010-04-01
