--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -15,19 +15,33 @@
 </ul>
 <p>If you don't meet the additional criteria, you can still install and use Qubes. It still offers significant security improvement over traditional OSes, because things such as GUI isolation, or kernel protection do not require special hardware.</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
-<p>You can download the ISO from here:</p>
+<p>You can download the ISO and the digital signature for the ISO from here:</p>
 <ul>
 <li>TODO (ISO link)</li>
-</ul>
-<p>Never trust files that you download from the internet, especially over plaintext connection! You are encouraged to also download and verify the signature file:</p>
-<ul>
 <li>TODO (ISO sig link)</li>
 </ul>
-<p>See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys.</p>
-<p>Once you verify this is an authentic ISO, you should burn it on a DVD. For instructions on how to &quot;burn&quot; it on a USB stick, see <a href="/wiki/wiki/UsbInstallation">this page</a>.</p>
+<p>See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys. Then, verify the downloaded ISO:</p>
+<pre class="wiki"><code>gpg -v ISO.asc</code></pre>
+<p>Once you verify this is an authentic ISO, you should burn it on a DVD. For instructions on how to &quot;burn&quot; it on a USB stick, see <a href="/wiki/wiki/UsbInstallation">this page</a>. Before proceeding with the installation, you should first read the <em>Known Issues paragraph</em>, below.</p>
 <h2 id="MigratingfromQubesAlpha3">Migrating from Qubes Alpha 3</h2>
-<p>TODO</p>
+<p>If you have Qubes Alpha 3 currently installed you must reinstall from scratch, as we offer no direct upgrade option in the installer. However, we do offer tools for smooth migration of your AppVMs. In order to do that, please backup your AppVMs using the <code></code><code>qvm-backup</code><code></code> tool [BackupRestore: as usual] (under Qubes Alpha 3). Then, after you install Qubes Beta 1, you will need to restore them using a special argument that would tell the restore tool to replace the old template name, used on Alpha 3, with the new one that we use on Qubes Beta 1:</p>
+<pre class="wiki"><code>qvm-backup-restore /mnt/backup/&lt;backup_dir&gt; --replace-template=linux-x64:fedora-14-x64</code></pre>
+<p>As you can see we decided to name our default template in Beta 1 in a bit more descriptive way (<em>fedora-14-x64</em>), mostly because we might be providing more templates in the future (e.g. based on other Linux distros).</p>
 <h2 id="KnownIssues">Known Issues</h2>
-<p>TODO</p>
+<ul>
+<li>NVIDIA GPU will likely cause problems, especially if you use suspend-to-RAM. This mostly results from the general poor support for NVIDIA GPUs under Linux, which in turn is caused by the lack of open documentation for those GPUs. You might try to use the NVIDIA's proprietary driver (see the instructions <a href="/wiki/wiki/InstallNvidiaDriver">here</a>), which apparently helps a lot.</li>
+<li>If you have Sony Vaio Z, you will need some tinkering before you would be able to fully use this machine with Qubes (and generally with non-Windows systems). See this <a href="/wiki/wiki/SonyVaioTinkering">page</a> for instructions.</li>
+<li>KDE taskbar might look ugly. This problem can be easily solved by turning composition on (it's called &quot;Desktop Effects&quot;, and can be found in System <a href="/wiki/wiki/Settings/Desktop">Settings/Desktop?</a> tab).</li>
+<li>Currently there is no support for delegating single USB devices to NetVMs, which likely mean that you will not be able to use your 3G modem. The only option is to delegate the whole USB controller to a NetVM, which, however, might not always be desirable, because of the other devices that are connected to this USB controller.</li>
+<li>KDE might break after resume from suspend-to-RAM -- this is a KDE-specific bug and applies to some GPUs only. The solution is to switch off composition (normally Alt-Shift-F12) before putting the computer into sleep.</li>
+</ul>
 <h2 id="GettingHelp">Getting Help</h2>
-<p>TODO</p>
+<ul>
+<li>User manuals are <a href="/wiki/wiki/UserDoc">here</a></li>
+<li>Developers documentation (normally not needed by users) is <a href="/wiki/wiki/SystemDoc">here</a></li>
+<li>If you don't find answer in the sources given above, write to the <em>qubes-devel</em> mailing list:
+<ul>
+<li><a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
+<li><code></code><code>qubes-devel@googlegroups.com</code><code></code></li>
+</ul></li>
+</ul>
