--- a/UserDoc.html
+++ b/UserDoc.html
@@ -1,13 +1,12 @@
-<h1 id="QubesUserDocumentation">Qubes User Documentation</h1>
-<p>[Right now this is just a list of topics to describe in the future]</p>
+<h1 id="QubesUserManual">Qubes User Manual</h1>
 <ul>
+<li>Getting started</li>
+<li>Copy and paste between domains (AppVMs)</li>
+<li>Copying files between domains (AppVMs)</li>
+<li>Using Disposable VMs</li>
+<li>Using Qubes firewall</li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
 <li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
-<li>How many and what AppVMs do I need?</li>
-<li>Copy and paste between AppVMs</li>
-<li>File sharing between AppVMs</li>
-<li>Network isolated AppVMs</li>
-<li>Disposable AppVMs</li>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
 <li><a href="/wiki/wiki/CopyToDomZero">How to copy files to Dom0?</a></li>
 </ul>
