--- a/WikiStart.html
+++ b/WikiStart.html
@@ -2,8 +2,8 @@
 <h2 id="ForUsers">For Users</h2>
 <ul>
 <li><a href="/wiki/wiki/InstallationGuide">Installation guide</a></li>
-<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures</a></li>
-<li><a href="/wiki/wiki/UserDoc">Qubes User Documentation</a></li>
+<li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
+<li><a href="/wiki/wiki/UserDoc">User's Guide</a></li>
 <li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
 </ul>
 <h2 id="ForDevelopers">For Developers</h2>
