--- a/UserDoc.html
+++ b/UserDoc.html
@@ -1,4 +1,4 @@
-<h1 id="QubesUserManual">Qubes User Manual</h1>
+<h1 id="QubesUserGuides">Qubes User Guides</h1>
 <ul>
 <li>Getting started</li>
 <li>Copy and paste between domains (AppVMs)</li>
