--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -53,6 +53,7 @@ xm dmesg | grep -i vtd</code></pre>
 <li>KDE taskbar might look ugly. This problem can be easily solved by turning composition on (it's called &quot;Desktop Effects&quot;, and can be found in System <a href="/wiki/wiki/Settings/Desktop">Settings/Desktop?</a> tab).</li>
 <li>Currently there is no support for delegating single USB devices to NetVMs, which likely mean that you will not be able to use your 3G modem. The only option is to delegate the whole USB controller to a NetVM, which, however, might not always be desirable, because of the other devices that are connected to this USB controller.</li>
 <li>KDE might break after resume from suspend-to-RAM -- this is a KDE-specific bug and applies to some GPUs only. The solution is to switch off composition (normally Alt-Shift-F12) before putting the computer into sleep.</li>
+<li>It might take up to 1 minute after you log in for the NetVM's network icon to appear in the tray -- be patient!</li>
 </ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
