--- a/UserDoc.html
+++ b/UserDoc.html
@@ -5,6 +5,7 @@
 <li>Copying files between domains (AppVMs)</li>
 <li>Using Disposable VMs</li>
 <li>Using Qubes firewall</li>
+<li><a href="/wiki/wiki/Updating/Adding">Updating/Adding?</a> new software to domains (AppVMs)</li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
 <li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
