--- a/UserDoc.html
+++ b/UserDoc.html
@@ -1,6 +1,6 @@
 <h1 id="QubesUserGuides">Qubes User Guides</h1>
 <ul>
-<li>Getting started</li>
+<li><a href="/wiki/wiki/GettingStarted">Getting started</a></li>
 <li>Copy and paste between domains (AppVMs)</li>
 <li>Copying files between domains (AppVMs)</li>
 <li>Using Disposable VMs</li>
