--- a/UserDoc.html
+++ b/UserDoc.html
@@ -1,8 +1,8 @@
 <h1 id="QubesUserGuides">Qubes User Guides</h1>
 <ul>
 <li><a href="/wiki/wiki/GettingStarted">Getting started</a></li>
-<li>Copy and paste between domains (AppVMs)</li>
-<li>Copying files between domains (AppVMs)</li>
+<li><a href="/wiki/wiki/CopyPaste">Copy and paste between domains (AppVMs)</a></li>
+<li><a href="/wiki/wiki/CopyingFiles">Copying files between domains (AppVMs)</a></li>
 <li>Using Disposable VMs</li>
 <li>Using Qubes firewall</li>
 <li>Updating and adding new software to domains (AppVMs)</li>
