--- a/CopyingFiles.html
+++ b/CopyingFiles.html
@@ -1,1 +1,22 @@
-
+<h1 id="Copyingfilesbetweendomains">Copying files between domains</h1>
+<p>Qubes also supports secure file coping between domains. In order to copy file(s) from domain A to domain B, follow those steps:</p>
+<ol>
+<li>Open file manager in the source domain (domain A), choose file(s) that you wish to copy, and right click on the selection, and choose <a href="/wiki/wiki/Scripts/Copy">Scripts/Copy?</a> to another AppVM...</li>
+</ol>
+<ol start="2">
+<li>A dialog box will appear asking for the name of the destination domain (domain B). Ensure the domain B is running (start it by pressing the Play button in the manager if needed)</li>
+</ol>
+<ol start="3">
+<li>You will get now a confirmation dialog box (this will be displayed by Dom0, so none of the domains can fake your consent). After you click ok, the file copy operation will start, and the files will be copied into the following folder in domain B:</li>
+</ol>
+<ul>
+<li><code></code><code>/home/user/incoming/from-&lt;srcdomain&gt;</code><code></code></li>
+</ul>
+<ol start="4">
+<li>You can now move them whenever you like in the domain B filesystem using the file manager there.</li>
+</ol>
+<h2 id="Oninter-domainfilecopysecurity">On inter-domain file copy security</h2>
+<ul>
+<li>Usual warning</li>
+<li>How Qubes is better than air-gapped systems</li>
+</ul>
