--- a/UserDoc.html
+++ b/UserDoc.html
@@ -1,14 +1,17 @@
 <h1 id="QubesUserGuides">Qubes User Guides</h1>
 <ul>
 <li><a href="/wiki/wiki/GettingStarted">Getting started</a></li>
-<li><a href="/wiki/wiki/CopyPaste">Copy and paste between domains (AppVMs)</a></li>
-<li><a href="/wiki/wiki/CopyingFiles">Copying files between domains (AppVMs)</a></li>
+<li><a href="/wiki/wiki/CopyPaste">Copy and paste between domains</a></li>
+<li><a href="/wiki/wiki/CopyingFiles">Copying files between domains</a></li>
+<li>[SoftwareUpdateVM Updating and adding new software to domains]</li>
+<li>[SoftwareUpdateDom0 Updating software in Dom0]</li>
+<li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
+</ul>
+<p>Advanced topics:</p>
+<ul>
 <li>Using Disposable VMs</li>
 <li>Using Qubes firewall</li>
-<li>Updating and adding new software to domains (AppVMs)</li>
-<li>Updating software Dom0</li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
-<li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
 <li><a href="/wiki/wiki/CopyToDomZero">How to copy files to Dom0?</a></li>
 </ul>
