--- a/UserDoc.html
+++ b/UserDoc.html
@@ -3,8 +3,8 @@
 <li><a href="/wiki/wiki/GettingStarted">Getting started</a></li>
 <li><a href="/wiki/wiki/CopyPaste">Copy and paste between domains</a></li>
 <li><a href="/wiki/wiki/CopyingFiles">Copying files between domains</a></li>
-<li>[SoftwareUpdateVM Updating and adding new software to domains]</li>
-<li>[SoftwareUpdateDom0 Updating software in Dom0]</li>
+<li><a href="/wiki/wiki/SoftwareUpdateVM">Updating and adding new software to domains</a></li>
+<li><a href="/wiki/wiki/SoftwareUpdateDom0">Updating software in Dom0</a></li>
 <li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
 </ul>
 <p>Advanced topics:</p>
