--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,6 +1,6 @@
 <h1 id="InstallationGuideforQubesBeta1">Installation Guide (for Qubes Beta 1)</h1>
-<p><strong>Qubes Beta 1 is coming in April! Stay tuned!</strong></p>
-<p>We're currently upgrading our infrastructure for this new release, and we no longer support installation of Alpha 3.</p>
+<p><strong>Qubes Beta 1 is scheduled to be released on April 12th! Stay tuned!</strong></p>
+<p>Our servers longer support installation of Alpha 3.</p>
 <p><strong>The instructions below are just a draft -- do not try to follow them now!</strong></p>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
 <p>Minimum:</p>
