--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -7,7 +7,7 @@
 <li>4GB of RAM</li>
 <li>64-bit Intel or AMD processor (x86_64 aka x64 aka AMD64)</li>
 <li>Intel GPU strongly preferred (if you have Nvidia GPU, prepare for some <a href="/wiki/wiki/InstallNvidiaDriver">troubleshooting</a>; we haven't tested ATI hardware)</li>
-<li>10GB of disk (Note that <strong>it is possible to install Qubes on an external USB disk</strong>, so that you can try it without sacrificing your current system. Mind, however that USB disks are usually SLOW!)</li>
+<li>10GB of disk (Note that <strong>it is possible to install Qubes on an external USB disk</strong>, so that you can try it without sacrificing your current system. Mind, however, that USB disks are usually SLOW!)</li>
 </ul>
 <p>Additional requirements:</p>
 <ul>
