--- a/UserDoc.html
+++ b/UserDoc.html
@@ -6,12 +6,16 @@
 <li><a href="/wiki/wiki/SoftwareUpdateVM">Updating and adding new software to domains</a></li>
 <li><a href="/wiki/wiki/SoftwareUpdateDom0">Updating software in Dom0</a></li>
 <li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
+<li>Using Disposable VMs</li>
 </ul>
 <p>Advanced topics:</p>
 <ul>
-<li>Using Disposable VMs</li>
 <li>Using Qubes firewall</li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
-<li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
 <li><a href="/wiki/wiki/CopyToDomZero">How to copy files to Dom0?</a></li>
+</ul>
+<p>Optional topics:</p>
+<ul>
+<li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
+<li><a href="/wiki/wiki/SonyVaioTinkering">Getting Sony Vaio Z laptop to work with Qubes</a></li>
 </ul>
