--- a/UserDoc.html
+++ b/UserDoc.html
@@ -11,6 +11,8 @@
 <p>Advanced topics:</p>
 <ul>
 <li>Using Qubes firewall</li>
+<li>Creating custom NetVMs</li>
+<li>Creating custom ProxyVMs</li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
 <li><a href="/wiki/wiki/CopyToDomZero">How to copy files to Dom0?</a></li>
 </ul>
