--- a/SonyVaioTinkering.html
+++ b/SonyVaioTinkering.html
@@ -1,1 +1,26 @@
 <h1 id="InstructionsforgettingyourSonyVaioZlaptopworkingwithQubesLinux">Instructions for getting your Sony Vaio Z laptop working with Qubes/Linux</h1>
+<p>Sony Vaio Z are great laptops -- they are very powerful, yet compact. The newer models, starting from Z12 are, however, not very well supported by Linux kernels (at least 2.6.34 that we currently use in Dom0) and thus some tinkering is needed to get Qubes working on those machines.</p>
+<h2 id="GettingthegraphicscardworkingunderLinuxQubesOS">Getting the graphics card working under Linux/Qubes OS</h2>
+<p>Newer models of Sony Vaio Z come with an &quot;intelligent&quot; GPU switch, that automatically chooses either Intel Integrated GPU (IGD) or the discrete NVIDIA GPU. This confuses the Linux graphics so much, that in most cases won't even be able to install a regular Linux on such a machine. Unfortunately, moving the switch into the &quot;Stamina&quot; position apparently doesn't work, and the automatic GPU switching is still active.</p>
+<p>One solution that actually worked for me was to reflash the BIOS (I know, I know, this is scary) and to enable the so called &quot;Advanced Menu&quot; in the BIOS. This Advanced Menu allows you to choose the desired behaviour of the GPU switch, which in our case would be to set it to &quot;Static&quot; and then move the mechanical switch to the &quot;Stamina&quot; position, that enabled the Intel IGD (which is much better supported on Linux).</p>
+<p>If you think you are ready to reflash you BIOS, here are the instructions that worked for me:</p>
+<p><a href="http://forum.notebookreview.com/sony/473226-insyde-hacking-new-vaio-z-advanced-menu-bios.html">​http://forum.notebookreview.com/sony/473226-insyde-hacking-new-vaio-z-advanced-menu-bios.html</a></p>
+<p><strong>WARNING</strong>: We take absolutely no responsibility that the BIOS relflashing instructions given at the referenced forum are 1) valid, 2) non-malicious, and 3) work at all. Do this step on your own risk. Keep in mind that reflashing your BIOS might yield your system unusable. If you don't feel like taking this risk (which is a reasonable state of mind), look for a different notebook, or ask Sony Support to enable this option for you.</p>
+<p>In practice I have downloaded the BIOS-patching tools, run them in a VM on a BIOS image i extracted from my laptop, diffed the two versions, and concluded that it doesn't <em>seem</em> malicious, and then bravely applied tha patched image. If you don't know what are you doing, just get a different laptop, really!</p>
+<p>On a side note, we should notice that allowing anybody to reflash the BIOS is really a bad idea from the security point of view (Hello Evil Maids!). Shame on you, Sony!</p>
+<h2 id="Gettingthetouchpadworkingduringinstallation">Getting the touchpad working during installation</h2>
+<p>In order to get the touchpad working during installation you should pass the <strong><code></code><code>i8042.nopnp=1</code><code></code></strong> option to the kernel before the installer starts.</p>
+<p>&lt;screenshot&gt;</p>
+<h2 id="Applyingotherfixes">Applying other fixes</h2>
+<p>There are a few more fixes needed for Sony Vaio Z, and we have prepared a special package that you can install in Dom0 that applies them all. After the installation is complete, open console in Dom0 and do the following:</p>
+<pre class="wiki"><code>$ sudo bash
+# qvm-dom0-networking up
+# yum install qubes-core-dom0-vaio-fixes
+# reboot</code></pre>
+<p>This script takes care about the following:</p>
+<ul>
+<li>Setting i8042.nopnp for your installed system</li>
+<li>Adding special option for the sound module (so you can get sound)</li>
+<li>Adding pm-suspend scripts that take care about restoring your screen after resume</li>
+</ul>
+<p>... now, having done this all, you will surely feel unprecedented satisfaction and you will love your Vaio very much! ;)</p>
