--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -49,11 +49,24 @@ xm dmesg | grep -i vtd</code></pre>
 <h2 id="KnownIssues">Known Issues</h2>
 <ul>
 <li>NVIDIA GPU will likely cause problems, especially if you use suspend-to-RAM. This mostly results from the general poor support for NVIDIA GPUs under Linux, which in turn is caused by the lack of open documentation for those GPUs. You might try to use the NVIDIA's proprietary driver (see the instructions <a href="/wiki/wiki/InstallNvidiaDriver">here</a>), which apparently helps a lot.</li>
+</ul>
+<ul>
 <li>If you have Sony Vaio Z, you will need some tinkering before you would be able to fully use this machine with Qubes (and generally with non-Windows systems). See this <a href="/wiki/wiki/SonyVaioTinkering">page</a> for instructions.</li>
+</ul>
+<ul>
 <li>KDE taskbar might look ugly. This problem can be easily solved by turning composition on (it's called &quot;Desktop Effects&quot;, and can be found in System <a href="/wiki/wiki/Settings/Desktop">Settings/Desktop?</a> tab).</li>
+</ul>
+<ul>
 <li>Currently there is no support for delegating single USB devices to NetVMs, which likely mean that you will not be able to use your 3G modem. The only option is to delegate the whole USB controller to a NetVM, which, however, might not always be desirable, because of the other devices that are connected to this USB controller.</li>
+</ul>
+<ul>
 <li>KDE might break after resume from suspend-to-RAM -- this is a KDE-specific bug and applies to some GPUs only. The solution is to switch off composition (normally Alt-Shift-F12) before putting the computer into sleep.</li>
+</ul>
+<ul>
 <li>It might take up to 1 minute after you log in for the NetVM's network icon to appear in the tray -- be patient!</li>
+</ul>
+<ul>
+<li>Virtualized try icons might look incorrectly directly for some apps. This problem seems to vanish whenever the app refreshes the icon.</li>
 </ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
