--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -70,8 +70,12 @@ xm dmesg | grep -i vtd</code></pre>
 </ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
-<li>User manuals are <a href="/wiki/wiki/UserDoc">here</a></li>
+<li><strong>User manuals are <a href="/wiki/wiki/UserDoc">here</a>.</strong> (Strongly recommended!)</li>
+</ul>
+<ul>
 <li>Developers documentation (normally not needed by users) is <a href="/wiki/wiki/SystemDoc">here</a></li>
+</ul>
+<ul>
 <li>If you don't find answer in the sources given above, write to the <em>qubes-devel</em> mailing list:
 <ul>
 <li><a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
