--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -71,6 +71,9 @@ xm dmesg | grep -i vtd</code></pre>
 <ul>
 <li>If using a wired connection in netvm, it might not come up properly after suspend/resume. One may need to manually do <code> ifconfig eth0 down; ifconfig eth0 up</code> in netvm after resume.</li>
 </ul>
+<ul>
+<li>Under some circumstances, when you choose &quot;Use All Space&quot; during installation, the installer will not replace your boot partition but will create another one.</li>
+</ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
 <li><strong>User manuals are <a href="/wiki/wiki/UserDoc">here</a>.</strong> (Strongly recommended!)</li>
