--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -66,7 +66,7 @@ xm dmesg | grep -i vtd</code></pre>
 <li>It might take up to 1 minute after you log in for the NetVM's network icon to appear in the tray -- be patient!</li>
 </ul>
 <ul>
-<li>Virtualized try icons might look incorrectly directly for some apps. This problem seems to vanish whenever the app refreshes the icon.</li>
+<li>Virtualized tray icons might look incorrectly directly for some apps. This problem seems to vanish whenever the app refreshes the icon.</li>
 </ul>
 <ul>
 <li>If using a wired connection in netvm, it might not come up properly after suspend/resume. One may need to manually do <code> ifconfig eth0 down; ifconfig eth0 up</code> in netvm after resume.</li>
