--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -54,7 +54,7 @@ xm dmesg | grep -i vtd</code></pre>
 <li>If you have Sony Vaio Z, you will need some tinkering before you would be able to fully use this machine with Qubes (and generally with non-Windows systems). See this <a href="/wiki/wiki/SonyVaioTinkering">page</a> for instructions.</li>
 </ul>
 <ul>
-<li>KDE taskbar might look ugly. This problem can be easily solved by turning composition on (it's called &quot;Desktop Effects&quot;, and can be found in System <a href="/wiki/wiki/Settings/Desktop">Settings/Desktop?</a> tab).</li>
+<li>KDE taskbar might look ugly. This problem can be easily solved by turning composition on (it's called &quot;Desktop Effects&quot;, and can be found in System Settings/Desktop tab).</li>
 </ul>
 <ul>
 <li>Currently there is no support for delegating single USB devices to NetVMs, which likely mean that you will not be able to use your 3G modem. The only option is to delegate the whole USB controller to a NetVM, which, however, might not always be desirable, because of the other devices that are connected to this USB controller.</li>
