--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,6 +1,4 @@
 <h1 id="InstallationGuideforQubesBeta1">Installation Guide (for Qubes Beta 1)</h1>
-<p><strong>Qubes Beta 1 is scheduled to be released on April 12th, stay tuned!</strong></p>
-<p><strong>The instructions below are just a draft -- do not try to follow them now!</strong></p>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
 <p>Minimum:</p>
 <ul>
@@ -14,14 +12,15 @@
 <li>Intel VT-d or AMD IOMMU technology (this is needed for effective isolation of your network VMs)</li>
 </ul>
 <p>If you don't meet the additional criteria, you can still install and use Qubes. It still offers significant security improvement over traditional OSes, because things such as GUI isolation, or kernel protection do not require special hardware.</p>
+<p><strong>Note:</strong> We don't recommend installing Qubes in a virtual machine!</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
 <p>You can download the ISO and the digital signature for the ISO from here:</p>
 <ul>
-<li>TODO (ISO link)</li>
-<li>TODO (ISO sig link)</li>
+<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta1-x86_64-DVD.iso">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta1-x86_64-DVD.iso</a></li>
+<li><a href="http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta1-x86_64-DVD.iso.asc">​http://s3-eu-west-1.amazonaws.com/qubes-os/iso/Qubes-R1-Beta1-x86_64-DVD.iso.asc</a></li>
 </ul>
 <p>See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys. Then, verify the downloaded ISO:</p>
-<pre class="wiki"><code>gpg -v ISO.asc</code></pre>
+<pre class="wiki"><code>gpg -v &lt;iso&gt;.asc</code></pre>
 <p>Once you verify this is an authentic ISO, you should burn it on a DVD. For instructions on how to &quot;burn&quot; it on a USB stick, see <a href="/wiki/wiki/UsbInstallation">this page</a>. Before proceeding with the installation, you are encouraged to first read all the information on this page, especially the <em>Known Issues</em> paragraph.</p>
 <p>Then, when finally ready, boot your system from the installer DVD and follow the instructions on screen. The installer is very simple and asks very few questions -- it's actually easier to install Qubes right now, then most other Linux distributions!</p>
 <p>The installer loads Xen right at the beginning, so chances are high that if you can see the installer's graphical screen, Qubes will work on your system :)</p>
